# NOVA

./: .gitattributes  .gitignore  AI_CONTEXT.md  BRAIN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE_REPORT.md  QA_REPORT.md  README.md  RELEASES.md  SECURITY.md  SECURITY_AUDIT.md  SESSION.md  TASKS.md  UAT_REPORT.md  VERSION  nova-gemini-cli-memory.md  release_candidate.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  security.yml
api/: README.md
api/ffi/: Cargo.toml
api/ffi/src/: lib.rs
api/jni/: Cargo.toml
apps/nova-demo/: Cargo.toml
apps/nova-demo/src/: main.rs
apps/nova-desktop/: Cargo.toml
apps/nova-desktop/src/: app.rs  main.rs  system_tray.rs
apps/nova-desktop/src/panels/: activity_panel.rs  health_panel.rs  memory_panel.rs  mod.rs  search_panel.rs  settings_panel.rs  voice_panel.rs
assets/: README.md
config/: README.md  default.toml
db/: README.md
design/: README.md
docs/: README.md
docs/adr/: ADR-0001-core-language-and-stack.md  ADR-0002-cross-platform-strategy.md  ADR-0003-application-architecture-pattern.md  ADR-0004-inter-module-communication-event-bus.md  ADR-0005-concurrency-and-async-model.md  ADR-0006-local-persistence-and-storage.md  ADR-0007-on-device-inference-runtime.md  ADR-0008-configuration-system.md  ADR-0009-logging-and-observability.md  ADR-0010-error-handling-strategy.md  README.md
docs/api/: README.md
docs/architecture/: README.md
docs/audits/: AUDIT-Baseline-Report-2026-07-04.md  PERFORMANCE_REPORT.md  QA_REPORT.md  README.md  SECURITY_AUDIT.md  UAT_REPORT.md  health_report.json
docs/bible/: README.md  (+5 more)
examples/: README.md
modules/: README.md
modules/ai/: Cargo.toml
modules/ai/src/: candle_provider.rs  context.rs  embedder.rs  events.rs  lib.rs  model_manager.rs  prompt.rs  provider.rs  remote_provider.rs  runtime.rs  session.rs  tool.rs  uncertainty.rs
modules/ai/tests/: ai_runtime_tests.rs  benchmarks.rs
modules/automation/: Cargo.toml
modules/automation/src/: action.rs  agent_runtime.rs  ai_bridge.rs  condition.rs  config.rs  consent_gate.rs  controller.rs  error.rs  events.rs  execution.rs  execution_manager.rs  execution_plan_adapter.rs  feedback_generator.rs  goal_orchestrator.rs  goal_registry.rs  history.rs  intention_parser.rs  lib.rs  monitoring.rs  observability.rs  outcome_verifier.rs  pipeline_step.rs  plan_executor.rs  planner.rs  planning_context.rs  real_executors.rs  recovery_orchestrator.rs  registry.rs  resource_manager.rs  scheduler.rs  screen_executor.rs  session_store.rs  trigger.rs  workflow.rs  world_state.rs
modules/automation/tests/: automation_tests.rs
modules/cross_device/: Cargo.toml
modules/cross_device/src/: lib.rs
modules/device/: Cargo.toml
modules/device/src/: config.rs  events.rs  lib.rs  permission.rs  tools.rs
modules/device/src/providers/: mock.rs  mod.rs
modules/device/src/services/: battery.rs  clipboard.rs  connectivity.rs  mod.rs  notifications.rs  sensors.rs  storage.rs
modules/device/tests/: device_tests.rs
modules/input/: Cargo.toml
modules/input/src/: android.rs  error.rs  events.rs  lib.rs  mock.rs  permission.rs  traits.rs  types.rs  windows.rs
modules/knowledge/: Cargo.toml
modules/knowledge/src/: analysis.rs  config.rs  engine.rs  entity.rs  error.rs  events.rs  graph.rs  index.rs  lib.rs  ranking.rs  reasoning.rs  recall.rs  relationship.rs  storage.rs  summary.rs  timeline.rs
modules/knowledge/tests/: knowledge_integration_tests.rs
modules/memory/: Cargo.toml
modules/memory/src/: crypto.rs  events.rs  lib.rs  record.rs  store.rs
modules/memory/tests/: memory_engine_tests.rs
modules/pairing/: Cargo.toml
modules/pairing/src/: lib.rs
modules/plugin_sdk/: Cargo.toml
modules/plugin_sdk/src/: context.rs  error.rs  events.rs  lib.rs  lifecycle.rs  loader.rs  manager.rs  manifest.rs  permissions.rs  plugin.rs  registry.rs  remote.rs  sandbox.rs  storage.rs
modules/plugin_sdk/tests/: plugin_sdk_tests.rs
modules/screen/: Cargo.toml
modules/screen/src/: capture.rs  config.rs  engine.rs  error.rs  events.rs  input.rs  jni_bridge.rs  lib.rs  permission.rs  traits.rs  types.rs
modules/screen/src/capture/: android.rs  windows.rs
modules/screen/src/grounding/: mod.rs
modules/screen/src/ocr/: mod.rs
modules/screen/src/ui_tree/: mod.rs
modules/search/: Cargo.toml
modules/search/src/: document.rs  engine.rs  lib.rs  parser.rs  vector.rs
modules/search/tests/: benchmarks.rs  parser_tests.rs  search_engine_tests.rs  semantic_and_perf_tests.rs
modules/security/: Cargo.toml
modules/security/src/: lib.rs
modules/sync/: Cargo.toml
modules/sync/src/: config.rs  error.rs  events.rs  lib.rs  manager.rs  pairing.rs  protocol.rs  transport.rs
modules/transport/: Cargo.toml
modules/transport/src/: lib.rs
modules/vision/: Cargo.toml
modules/vision/src/: cache.rs  caption.rs  color.rs  config.rs  context_builder.rs  decoder.rs  detection.rs  embedding.rs  engine.rs  error.rs  events.rs  face.rs  hashing.rs  image_loader.rs  lib.rs  manager.rs  metadata.rs  ocr.rs  permission.rs  preprocessor.rs  quality.rs  scene.rs  screenshot.rs  search.rs  tags.rs  thumbnail.rs  tools.rs
modules/vision/src/providers/: mock.rs  mod.rs
modules/voice/: Cargo.toml
modules/voice/src/: events.rs  lib.rs  mock.rs  pipeline.rs  provider.rs  session.rs  types.rs
modules/voice/tests/: voice_tests.rs
modules/windows_agent/: Cargo.toml
modules/windows_agent/src/: lib.rs
plugins/: README.md
qa/: Android_Test_Cases.md  Windows_Test_Cases.md
research/: README.md
roadmap/: README.md  ROADMAP.md
scripts/: README.md  build.ps1
sdk/: README.md
src/: README.md
src/kernel/: Cargo.toml
src/kernel/src/: config.rs  consent.rs  egress.rs  error.rs  event_bus.rs  kernel.rs  lib.rs  logger.rs  module.rs
src/kernel/tests/: consent_egress_tests.rs  integration_tests.rs  module_registry_tests.rs
tasks/: M20.md  M21.md  M22.md  M22_S1_S2_status.md  M23.md
tests/: README.md
(+16 files in other folders)
