[workspace]
resolver = "2"
members = [
    "src/kernel",
    "modules/memory",
    "modules/search",
    "modules/voice",
    "modules/ai",
    "modules/comms",
    "modules/device",
    "modules/vision",
    "modules/sync",
    "modules/knowledge",
    "modules/automation",
    "modules/plugin_sdk",
    "modules/plugin_host",
    "modules/screen",
    "modules/cross_device",
    "modules/windows_agent",
    "modules/transport",
    "modules/pairing",
    "modules/security",
    "modules/input",
    "api/ffi",
    "api/jni",
    "apps/nova-demo",
    "apps/nova-desktop",
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
async-trait = "0.1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"
