[package]
name = "nova_demo"
version = "0.1.0"
edition = "2021"

# A small, runnable end-to-end smoke test of the NOVA kernel. It boots the kernel,
# starts a few module skeletons, drives one pub/sub event and one request/response,
# then prints the config defaults and the user-facing activity + egress trails.
# This is a developer demo, NOT the product UI (there is no app/screen yet).

[[bin]]
name = "nova-demo"
path = "src/main.rs"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
nova_memory = { path = "../../modules/memory" }
nova_search = { path = "../../modules/search" }
nova_ai = { path = "../../modules/ai" }
nova_voice = { path = "../../modules/voice" }
nova_comms = { path = "../../modules/comms" }
nova_vision = { path = "../../modules/vision" }
nova_plugin_host = { path = "../../modules/plugin_host" }
nova_plugin_sdk = { path = "../../modules/plugin_sdk" }
nova_knowledge = { path = "../../modules/knowledge" }
nova_automation = { path = "../../modules/automation" }
nova_security = { path = "../../modules/security" }
nova_pairing = { path = "../../modules/pairing" }
nova_sync = { path = "../../modules/sync" }
nova_transport = { path = "../../modules/transport" }
nova_windows_agent = { path = "../../modules/windows_agent" }
nova_cross_device = { path = "../../modules/cross_device" }
nova_input = { path = "../../modules/input" }
nova_screen = { path = "../../modules/screen" }
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
