[package]
name = "nova_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }

[dev-dependencies]
sysinfo = "0.30"
