[package]
name = "nova_automation"
version = "0.1.0"
edition = "2021"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
nova_memory = { path = "../memory" }
nova_search = { path = "../search" }
nova_ai = { path = "../ai" }
nova_input = { path = "../input" }
nova_screen = { path = "../screen" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
regex = "1"
async-trait = "0.1"
