[package]
name = "nova_knowledge"
version = "0.2.0"
edition = "2021"
description = "NOVA Knowledge Graph & Memory Intelligence — entity extraction, semantic index, reasoning, graph persistence"

[lib]
name = "nova_knowledge"
path = "src/lib.rs"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
nova_memory = { path = "../../modules/memory" }
nova_search = { path = "../../modules/search" }
nova_vision = { path = "../../modules/vision", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = []
vision = ["nova_vision"]
full = ["vision"]
