[package]
name = "nova_pairing"
version = "0.1.0"
edition = "2021"
description = "NOVA Cross-Device Pairing — QR pairing, 6-digit code, public key exchange, trusted device store"

[lib]
name = "nova_pairing"
path = "src/lib.rs"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
nova_security = { path = "../../modules/security" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
