[package]
name = "nova_screen"
version = "0.1.0"
edition = "2021"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
uuid = { workspace = true }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = [] }