[package]
name = "nova_security"
version = "0.1.0"
edition = "2021"
description = "NOVA Cross-Device Security — certificates, command signing, AES encryption, key rotation, permission tokens"

[lib]
name = "nova_security"
path = "src/lib.rs"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = "0.8"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["serde", "pem"] }
sha2 = "0.10"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
