[package]
name = "nova_sync"
version = "0.1.0"
edition = "2021"
description = "NOVA Device Sync — E2E encrypted cross-device sync protocol"

[lib]
name = "nova_sync"
path = "src/lib.rs"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
aes-gcm = "0.10"
rand = "0.8"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
blake3 = "1.5"
