[package]
name = "nova_transport"
version = "0.1.0"
edition = "2021"
description = "NOVA Cross-Device Transport — TCP, local discovery, heartbeat, reconnect, fragmentation, compression, encryption"

[lib]
name = "nova_transport"
path = "src/lib.rs"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
nova_security = { path = "../../modules/security" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
flate2 = "1.0"
bincode = "1.3"
