[package]
name = "nova_voice"
version = "0.1.0"
edition = "2021"

[dependencies]
nova_kernel = { path = "../../src/kernel" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nova_ai = { path = "../ai" }
